# sumaru

./: .gitignore  Cargo.toml  README.md  REFACTOR.md
.cargo/: config.toml
.circleci/: config.yml
.claude/: settings.local.json
docs/: COMPLETED.md  EGUI_CONTROLLER_REFERENCE.md  ROADMAP.md
docs/images/: README.md
previews/: suma_surface_controller_preview.html
src/: afni.rs  color.rs  command.rs  dataset.rs  inspect.rs  io.rs  lib.rs  main.rs  niml_debug.rs  overlay.rs  roi.rs  spec.rs  stats.rs  surface.rs  volume.rs
src/io/: gifti.rs  mod.rs  niml.rs  roi.rs
src/viewer/: afni.rs  camera.rs  capture.rs  edit.rs  gpu.rs  graph.rs  input.rs  mesh.rs  mod.rs  overlay_load.rs  pairing.rs  pick.rs  roi.rs  scene.rs  screenshot.rs  shader.wgsl  transform.rs  ui.rs  volume_slice.wgsl  volume_view.rs
testing/: ISC_lh_theta_neg.gii.dset  ISC_lh_theta_neg.niml.dset  ISC_lh_theta_pos.niml.dset  ISC_rh_theta_neg.niml.dset  ISC_rh_theta_pos.niml.dset  fs_lowres_std-lh.gii  fs_lowres_std-rh.gii  rh.thickness.gii.dset  std.141.sub-3_both.spec  sub-3_rh.spec  suma_clickmiddle_joined.finished.niml.roi
tests/: afni_niml_recordings.rs  local_reference_files.rs  test_scripts.sh
